# nehe-ndk-gles20

./: .gitignore  .gitmodules  LICENSE  README.md
common_includes/: android_asset_operations.h
lesson01/: README.md  build.gradle  gradle.properties  settings.gradle.kts
lesson01/app/: build.gradle  build.gradle.kts
lesson02/: README.md  build.gradle  settings.gradle.kts
lesson02/app/: build.gradle  build.gradle.kts
lesson03/: README.md  build.gradle  lesson02.iml~  settings.gradle.kts
lesson03/app/: app.iml~  build.gradle  build.gradle.kts  build.gradle~
lesson04/: README.md  build.gradle  settings.gradle.kts
lesson04/app/: build.gradle  build.gradle.kts
lesson05/: README.md  settings.gradle.kts
lesson05/app/: build.gradle  build.gradle.kts
lesson06/: README.md  build.gradle.kts  settings.gradle.kts
lesson06/app/: build.gradle  build.gradle.kts
lesson07/: README.md  settings.gradle.kts
lesson07-blinn-phong/: README.md  gradle.properties  settings.gradle.kts
lesson07-normal-mapping/: README.md  build.gradle.kts  settings.gradle.kts
lesson07/app/: build.gradle  build.gradle.kts
lesson08/: README.md  build.gradle  settings.gradle.kts
lesson08/app/: build.gradle  build.gradle.kts
lesson09/: README.md  build.gradle  settings.gradle.kts
lesson09/app/: build.gradle  build.gradle.kts
lesson09/app/src/main/cpp/: CMakeLists.txt  GLES2Lesson.cpp  GLES2Lesson.h  NdkGlue.cpp  NdkGlue.h  Star.cpp  Star.h
lesson10/: README.md  build.gradle  settings.gradle.kts
lesson10-cardboard/: build.gradle  settings.gradle
lesson10/app/: build.gradle  (+1 more)
(+222 files in other folders)
